--- a/Users/Thavakkanic/workspace1/loginjenkinsdotnet3/pom.xml
+++ b/Users/Thavakkanic/workspace1/loginjenkinsdotnet3/pom.xml
@@ -5,4 +5,43 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>loginjenkinsdotnet3</name>
   <description>login Testing jenkinsdotnet3</description>
+  <build>
+ 		<plugins>
+ 		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${jdk.level}</source>
+					<target>${jdk.level}</target>
+				</configuration>
+			</plugin>
+			<!-- Below plug-in is used to execute tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<!-- TestNG suite XML files -->
+						<suiteXmlFile>TestNG.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.seleniumhq.selenium</groupId>
+  		<artifactId>selenium-java</artifactId>
+  	</dependency>
+  </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.seleniumhq.selenium</groupId>
+  			<artifactId>selenium-java</artifactId>
+  			<version>3.9.1</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
